# candlerun

edgerunner/: .rust-analyzer.toml  Cargo.toml  build.rs
edgerunner/assets/: config.toml
edgerunner/src/: lib.rs  log_util.rs  main.rs  system_benchmark.rs
edgerunner/src/conf/: config.rs  mod.rs  model.rs  which.rs
edgerunner/src/model/: loader.rs  mod.rs  prompt.rs  types.rs
edgerunner/src/runner/: mod.rs  text_generation.rs
example/: .gitignore  Cargo.toml
example/src/: main.rs
