[package]
name = "edgerunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.76", features = ["backtrace"] }
candle-core = "0.3.2"
candle-transformers = "0.3.2"
clap = { version = "4.4.11", features = ["derive"] }
config = "0.13.4"
cudarc = { version = "0.10.0", optional = true }
dirs = "5.0.1"
env_logger = "0.10.1"
hf-hub = "0.3.2"
log = "0.4.20"
rand = "0.8.5"
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.56"
tokenizers = "0.15.0"
tokio = { version = "1.35.1", features = ["full"] }

[features]
accelerate = ["candle-core/accelerate"]
cuda = ["candle-core/cuda", "candle-transformers/cuda", "dep:bindgen_cuda"]
[target.'cfg(target_os = "macos")']
metal = ["candle-core/metal", "candle-nn/metal"]


[build-dependencies]
anyhow = { version = "1.0.76", features = ["backtrace"] }
bindgen_cuda = { version = "0.1.3", optional = true }
